# vondel

./: .gitignore  404.html  CNAME  Cargo.toml  README.md  chapter_1.html  files.html  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: deploy-gh-pages.yml  rust-clippy.yml  rust-fmt.yml  rust.yml  upload-bins.yml
assembler/: comparision.html  evaluator.html  index.html  lexer.html  parser.html  specs.html
docs/: book.toml
docs/diagrams/: 32bit-mul.xml  alu_overview.xml  clock_relation.xml  div_mod.xml  imm.xml  pu.xml  uarch_instruction_share.xml  uarch_overview.xml
docs/src/: README.md  SUMMARY.md  files.md
docs/src/assembler/: README.md  comparision.md  evaluator.md  lexer.md  parser.md  specs.md
docs/src/interpreter/: README.md  environment.md  language.md  lexer.md  object.md  parser.md
docs/src/uarch/: README.md  hardware.md  implementations.md  uinstruction.md
interpreter/: environment.html  index.html  language.html  lexer.html  object.html  parser.html
interpreter/evaluator/: index.html  rust.html
programs/: csw.asm  div.asm  div_hardware.asm  factorial.asm  factorial_hardware.asm  power.asm  power_hardware.asm
src/: assembler.rs  inter.rs  lib.rs
src/assembler/: cli.rs  evaluator.rs  lexer.rs  parser.rs  sections.rs  tokens.rs
src/inter/: ast.rs  cli.rs  environment.rs  evaluator.rs  lexer.rs  object.rs  repl.rs  tokens.rs
src/inter/ast/: expression.rs
src/inter/evaluator/: custom.rs  (+1 more)
src/uarch/: alu.rs  cli.rs  mem.rs  mod.rs
uarch/: hardware.html  implementations.html  index.html  uinstruction.html
(+3 files in other folders)
