[package]
name = "vondel"
version = "0.2.0"
edition = "2021"
authors = ["André Willyan <willyanpublic@protonmail.com>", "Said Rodrigues <coderflemis@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive"] }
thiserror = "1.0.40"
